--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,14 +6,41 @@
     <title>Contact - OT3 Photography</title>
     <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
     <style>
-        /* Center Contact Section */
-        #contact {
+        /* Global Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body and Wrapper */
+        html, body {
+            height: 100%;
+        }
+
+        body {
             display: flex;
             flex-direction: column;
+            font-family: Arial, sans-serif;
+        }
+
+        /* Sticky Footer */
+        footer {
+            margin-top: auto;
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+
+        /* Center Contact Section */
+        #contact {
+            flex: 1; /* Allow the contact section to expand and push footer down */
+            display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100vh; /* Full viewport height to center vertically */
             text-align: center;
+            padding: 20px; /* Add some padding for breathing room */
         }
 
         /* Form Layout */
@@ -31,7 +58,7 @@
         .form-fields {
             display: flex;
             flex-direction: column;
-            flex: 1; /* Take up the available space */
+            flex: 1;
             gap: 15px; /* Add spacing between input fields */
         }
 
@@ -51,7 +78,7 @@
 
         /* Send Message Button */
         .send-button {
-            align-self: flex-start; /* Align button to the top of the form */
+            align-self: center; /* Center vertically relative to input fields */
             margin-top: 10px;
         }
 
