--- a/index.html
+++ b/index.html
@@ -15,27 +15,10 @@
         </div>
         <ul class="nav-links">
             <li><a href="pages/about.html">About</a></li>
-            <li><a href="pages/marine_life.html">Marine Life</a>
-                <ul class="dropdown">
-                    <li><a href="california.html">California</a></li>
-                    <li><a href="hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="pages/reptiles.html">Reptiles</a>
-                <ul class="dropdown">
-                    <li><a href="reptiles_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="pages/birds.html">Birds</a>
-                <ul class="dropdown">
-                    <li><a href="birds_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="pages/plants.html">Plants</a>
-                <ul class="dropdown">
-                    <li><a href="plants_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
+            <li><a href="pages/marine_life.html">Marine Life</a></li>
+            <li><a href="pages/reptiles.html">Reptiles</a></li>
+            <li><a href="pages/birds.html">Birds</a></li>
+            <li><a href="pages/plants.html">Plants</a></li>
             <li><a href="pages/surfing.html">Surfing</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
         </ul>
@@ -59,6 +42,7 @@
         <p>&copy; 2024 OT3 Photography</p>
     </footer>
 
+    <!-- JavaScript for Mobile Menu -->
     <script>
         // Toggle mobile menu
         const mobileMenu = document.getElementById("mobile-menu");
