--- a/pages/about.html
+++ b/pages/about.html
@@ -8,37 +8,27 @@
 </head>
 <body>
 
-    <!-- Navigation Section -->
    <!-- Navigation Section -->
     <nav>
-        <ul>
-            <!-- Move About to the first position -->
-            <li><a href="../pages/about.html">About</a></li>
-            <li><a href="../pages/marine_life.html">Marine Life</a>
-                <ul class="dropdown">
-                    <li><a href="../pages/marine_life/california.html">California</a></li>
-                    <li><a href="../pages/marine_life/hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="../pages/reptiles.html">Reptiles</a>
-                <ul class="dropdown">
-                    <li><a href="../pages/reptiles_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="../pages/birds.html">Birds</a>
-                <ul class="dropdown">
-                    <li><a href="../pages/birds_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="../pages/plants.html">Plants</a>
-                <ul class="dropdown">
-                    <li><a href="../pages/plants_hawaii.html">Hawaii</a></li>
-                </ul>
-            </li>
-            <li><a href="../pages/surfing.html">Surfing</a></li>
-            <li><a href="../pages/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div class="logo">
+        <a href="index.html">OT3 Photography</a>
+    </div>
+    <ul>
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/marine_life.html">Marine Life</a></li>
+        <li><a href="pages/reptiles.html">Reptiles</a></li>
+        <li><a href="pages/birds.html">Birds</a></li>
+        <li><a href="pages/plants.html">Plants</a></li>
+        <li><a href="pages/surfing.html">Surfing</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
+    </ul>
+    <div class="menu-toggle">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+</nav>
+
 
     <!-- About Section -->
     <section id="about">
