--- a/pages/about.html
+++ b/pages/about.html
@@ -14,13 +14,13 @@
         <a href="index.html">OT3 Photography</a>
     </div>
     <ul>
-        <li><a href="pages/about.html">About</a></li>
-        <li><a href="pages/marine_life.html">Marine Life</a></li>
-        <li><a href="pages/reptiles.html">Reptiles</a></li>
-        <li><a href="pages/birds.html">Birds</a></li>
-        <li><a href="pages/plants.html">Plants</a></li>
-        <li><a href="pages/surfing.html">Surfing</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
+        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="../pages/marine_life.html">Marine Life</a></li>
+        <li><a href="../pages/reptiles.html">Reptiles</a></li>
+        <li><a href="../pages/birds.html">Birds</a></li>
+        <li><a href="../pages/plants.html">Plants</a></li>
+        <li><a href="../pages/surfing.html">Surfing</a></li>
+        <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
     <div class="menu-toggle">
         <div class="bar"></div>
