--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Navigation Section -->
     <nav>
         <div class="logo">
-            <a href="#">OT3 Photography</a>
+             <a href="index.html"><img src="path/to/logo.png" alt="OT3 Photography Logo"></a>
         </div>
         <ul class="nav-links">
             <li><a href="pages/about.html">About</a></li>
