--- a/pages/surfing.html
+++ b/pages/surfing.html
@@ -11,7 +11,7 @@
     <!-- Navigation Section -->
   <nav>
     <div class="logo">
-        <a href="index.html"><img src="path/to/logo.png" alt="OT3 Photography Logo"></a>
+        <a href="../index.html"><img src="path/to/logo.png" alt="OT3 Photography"></a>
     </div>
     <ul>
         <li><a href="../pages/about.html">About</a></li>
