--- a/pages/about.html
+++ b/pages/about.html
@@ -33,13 +33,12 @@
     <!-- About Section -->
     <section id="about">
         <h2>About OT3 Photography</h2>
-        <p>Welcome to OT3 Photography! This website showcases a collection of stunning photographs from various categories, such as marine life, birds, reptiles, landscapes, and more.</p>
-        <p>Our goal is to share the beauty of the natural world through captivating imagery, captured from different locations around the globe. Whether it's vibrant underwater scenes, serene landscapes, or dynamic surfing shots, we aim to offer a visual experience that brings nature to life.</p>
-        <p>Founded by passionate photographers, OT3 Photography is a journey to inspire others to appreciate the wildlife and environments that make our planet so extraordinary. We believe photography has the power to change perspectives, spark curiosity, and foster a deeper connection to nature.</p>
+        <p>Welcome to OT3 Photography! This website showcases a collection of photographs from various categories, such as marine life, birds, reptiles, and more.</p>
+        <p>Our goal is to share the beauty of the natural world through captivating imagery. Whether it's vibrant underwater scenes, serene landscapes, or dynamic surfing shots, we aim to offer a visual experience that brings nature to life.</p>
 
         <h3>Meet the Photographer</h3>
-        <p>Hi, I'm [Your Name], the photographer behind OT3 Photography. With a background in [your background, e.g., marine biology, wildlife conservation, etc.], I've always had a deep fascination with nature and its beauty. Photography has been my way of capturing and sharing these moments, allowing others to experience the world through my lens.</p>
-    </section>
+        <p>Hi, I'm Olen (Olie) Turner III, the photographer behind OT3 Photography. I've always had a deep fascination with nature and its beauty. Photography has been my way of capturing and sharing these moments, allowing others to experience the world through my lens.</p>
+    </section
 
     <!-- Footer -->
 <footer>
