--- a/pages/marine_life.html
+++ b/pages/marine_life.html
@@ -33,11 +33,8 @@
     <!-- Main Content for Marine Life -->
     <section id="marine-life">
         <h2>Marine Life Photography</h2>
-        <p>Explore the beauty of marine life, from vibrant underwater creatures to fascinating sea plants.</p>
+        <p>Explore the beauty of marine life, from vibrant underwater sea slugs to fascinating sharks.</p>
 
-        <div class="region-links">
-            <a href="california.html" class="region-button">California</a>
-            <a href="hawaii.html" class="region-button">Hawaii</a>
         </div>
     </section>
 
