--- a/pages/volcanos.html
+++ b/pages/volcanos.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Surfing - OT3 Photography</title>
+   <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
+</head>
+<body>
 
+    <!-- Navigation Section -->
+  <nav>
+    <div class="logo">
+        <a href="../index.html"><img src="path/to/logo.png" alt="OT3 Photography"></a>
+    </div>
+    <ul>
+        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="../pages/marine_life.html">Marine Life</a></li>
+        <li><a href="../pages/reptiles.html">Reptiles</a></li>
+        <li><a href="../pages/birds.html">Birds</a></li>
+        <li><a href="../pages/plants.html">Plants</a></li>
+        <li><a href="../pages/surfing.html">Surfing</a></li>
+        <li><a href="../pages/contact.html">Contact</a></li>
+    </ul>
+    <div class="menu-toggle">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+</nav>
+
+
+    <!-- Main Content for Volcanos -->
+    <section id="volcanos">
+        <h2>Volcano Photography</h2>
+        <p>Experience the thrilling eruptions of Hawaii with our stunning photos.</p>
+
+        </div>
+    </section>
+
+     <!-- Footer -->
+<footer>
+    <p>&copy; 2024 OT3 Photography</p>
+</footer>
+
+<!-- JavaScript for Mobile Menu -->
+<script>
+    // Mobile Menu Toggle
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navMenu = document.querySelector('nav ul');
+
+    menuToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
+    });
+</script>
+</body>
+</html>
