--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="pages/birds.html">Birds</a></li>
             <li><a href="pages/plants.html">Plants</a></li>
             <li><a href="pages/surfing.html">Surfing</a></li>
-            <li><a href="pages/volcanos.html">Contact</a></li>
+            <li><a href="pages/volcanos.html">Volcanos</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
     
         </ul>
