--- a/pages/about.html
+++ b/pages/about.html
@@ -20,6 +20,7 @@
         <li><a href="../pages/birds.html">Birds</a></li>
         <li><a href="../pages/plants.html">Plants</a></li>
         <li><a href="../pages/surfing.html">Surfing</a></li>
+         <li><a href="pages/volcanos.html">Volcanos</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
     <div class="menu-toggle">
