--- a/pages/greenery.html
+++ b/pages/greenery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plants - OT3 Photography</title>
+    <title>greenery - OT3 Photography</title>
     <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
 </head>
 <body>
@@ -18,9 +18,9 @@
         <li><a href="../pages/marine_life.html">Marine Life</a></li>
         <li><a href="../pages/reptiles.html">Reptiles</a></li>
         <li><a href="../pages/birds.html">Birds</a></li>
-        <li><a href="../pages/plants.html">Plants</a></li>
+        <li><a href="../pages/greenery.html">greenery</a></li>
         <li><a href="../pages/surfing.html">Surfing</a></li>
-        <li><a href="../pages/volcanos.html">Volcanos</a></li>
+        <li><a href="../pages/volcanoess.html">volcanoess</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
     <div class="menu-toggle">
@@ -33,8 +33,8 @@
 
     <!-- Main Content -->
     <section id="intro">
-        <h2>Plants - OT3 Photography</h2>
-        <p>Explore the beauty of underwater plants and landscapes through stunning photography. Select a region to discover the diverse plant life that thrives in different environments.</p>
+        <h2>greenery - OT3 Photography</h2>
+        <p>Explore the beauty of underwater greenery and landscapes through stunning photography. Select a region to discover the diverse plant life that thrives in different environments.</p>
     </section>
 
     <!-- Footer -->
