Update and rename volcanos.html to volcanoes.html

--- a/pages/volcanoes.html
+++ b/pages/volcanoes.html
@@ -18,9 +18,9 @@
         <li><a href="../pages/marine_life.html">Marine Life</a></li>
         <li><a href="../pages/reptiles.html">Reptiles</a></li>
         <li><a href="../pages/birds.html">Birds</a></li>
-        <li><a href="../pages/plants.html">Plants</a></li>
+        <li><a href="../pages/greenerys.html">greenerys</a></li>
         <li><a href="../pages/surfing.html">Surfing</a></li>
-        <li><a href="../pages/volcanos.html">Volcanos</a></li>
+        <li><a href="../pages/volcanoes.html">volcanoes</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
     <div class="menu-toggle">
@@ -31,9 +31,9 @@
 </nav>
 
 
-    <!-- Main Content for Volcanos -->
-    <section id="volcanos">
-        <h2>Volcano Photography</h2>
+    <!-- Main Content for volcanoes -->
+    <section id="volcanoes">
+        <h2>volcanoes Photography</h2>
         <p>Experience the thrilling eruptions of Hawaii with our stunning photos.</p>
 
         </div>
