--- a/pages/surfing.html
+++ b/pages/surfing.html
@@ -18,9 +18,9 @@
         <li><a href="../pages/marine_life.html">Marine Life</a></li>
         <li><a href="../pages/reptiles.html">Reptiles</a></li>
         <li><a href="../pages/birds.html">Birds</a></li>
-        <li><a href="../pages/plants.html">Plants</a></li>
+        <li><a href="../pages/greenery.html">Greenery</a></li>
         <li><a href="../pages/surfing.html">Surfing</a></li>
-        <li><a href="../pages/volcanos.html">Volcanos</a></li>
+        <li><a href="../pages/volcanoes.html">Volcanoes</a></li>
         <li><a href="../pages/contact.html">Contact</a></li>
     </ul>
     <div class="menu-toggle">
