--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="pages/marine_life.html">Marine Life</a></li>
             <li><a href="pages/reptiles.html">Reptiles</a></li>
             <li><a href="pages/birds.html">Birds</a></li>
-            <li><a href="pages/greenery.html">greenery</a></li>
+            <li><a href="pages/greenery.html">Greenery</a></li>
             <li><a href="pages/surfing.html">Surfing</a></li>
             <li><a href="pages/volcanoes.html">Volcanoes</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
