--- a/pages/birds.html
+++ b/pages/birds.html
@@ -32,7 +32,7 @@
     
     <!-- Main Content for Birds -->
     <section id="birds">
-        <h2>Birds Photography</h2>
+        <h2>Birds</h2>
         <p>Discover the stunning bird species of Hawaii, captured in their natural habitat.</p>
 
     </div>
