--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
 
     <!-- About Section -->
     <section id="about">
-        <h2>About OT3 Photography</h2>
+        <h2>About</h2>
         <p>Welcome to OT3 Photography! This website showcases a collection of photographs from various categories, such as marine life, birds, reptiles, and more.</p>
         <p>Our goal is to share the beauty of the natural world through captivating imagery. Whether it's vibrant underwater scenes, serene landscapes, or dynamic surfing shots, we aim to offer a visual experience that brings nature to life.</p>
 
