--- a/pages/greenery.html
+++ b/pages/greenery.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content -->
     <section id="intro">
-        <h2>greenery - OT3 Photography</h2>
+        <h2>Greenery</h2>
         <p>Explore the beauty of underwater greenery and landscapes through stunning photography. Select a region to discover the diverse plant life that thrives in different environments.</p>
     </section>
 
