--- a/pages/marine_life.html
+++ b/pages/marine_life.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content for Marine Life -->
     <section id="marine-life">
-        <h2>Marine Life Photography</h2>
+        <h2>Marine Life</h2>
         <p>Explore the beauty of marine life, from vibrant underwater sea slugs to fascinating sharks.</p>
 
         </div>
