--- a/pages/reptiles.html
+++ b/pages/reptiles.html
@@ -32,7 +32,7 @@
 
     <!-- Main Content for Reptiles -->
     <section id="reptiles">
-        <h2>Reptiles Photography</h2>
+        <h2>Reptiles</h2>
         <p>Discover the fascinating reptiles of Hawaii, from sea turtles to unique lizards.</p>
 
         </div>
