--- a/pages/surfing.html
+++ b/pages/surfing.html
@@ -33,8 +33,8 @@
 
     <!-- Main Content for Surfing -->
     <section id="surfing">
-        <h2>Surfing Photography</h2>
-        <p>Experience the thrilling surf culture of Hawaii with our stunning photos.</p>
+        <h2>Surfing</h2>
+        <p>Experience the thrilling surf culture of Hawaii with these stunning photos.</p>
 
         </div>
     </section>
