--- a/pages/volcanoes.html
+++ b/pages/volcanoes.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content for volcanoes -->
     <section id="volcanoes">
-        <h2>Volcanoes Photography</h2>
+        <h2>Volcanoes</h2>
         <p>Experience the thrilling eruptions of Hawaii with our stunning photos.</p>
 
         </div>
