--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - OT3 Photography</title>
 <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
+<style>
+        /* Top Button Styles */
+        #topBtn {
+            display: none; /* Hidden by default */
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 1000;
+            background-color: #444; /* Dark gray background */
+            color: #f1f1f1; /* Light text */
+            border: none;
+            border-radius: 5px;
+            padding: 10px 15px;
+            cursor: pointer;
+            font-size: 1em;
+            transition: background-color 0.3s ease;
+        }
+
+        #topBtn:hover {
+            background-color: #666; /* Lighter gray on hover */
+        }
+    </style>
 </head>
 <body>
 
