--- a/pages/contact.html
+++ b/pages/contact.html
@@ -122,7 +122,7 @@
     <!-- Navigation Section -->
    <nav>
     <div class="logo">
-        <a href="../index.html"><img src="path/to/logo.png" alt="OT3 Photography"></a>
+        <a href="../index.html"><img src="path/to/logo.png"></a>
     </div>
     <ul>
         <li><a href="../pages/about.html">About</a></li>
