--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - OT3 Photography</title>
     <link rel="stylesheet" href="../style.css"> <!-- Adjusted to go up one level to find style.css -->
-    <script src="../script.js" defer></script> <!-- Link to the JavaScript file that loads header and footer -->
+    <script src="../loadHTML.js" defer></script> <!-- Link to the JavaScript file that loads header and footer -->
     
     <style>
         /* Top Button Styles */
