--- a/pages/marine_life.html
+++ b/pages/marine_life.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marine Life - OT3 Photography</title>
-    <link rel="stylesheet" href="assets/css/style.css"> <!-- Adjusted to go up one level to find style.css -->
+    <link rel="stylesheet" href="/assets/css/style.css"> <!-- Adjusted to go up one level to find style.css -->
     <style>
         /* Top Button Styles */
         #topBtn {
