--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Navigation Section -->
     <nav>
         <div class="logo">
-             <a href="index.html"><img src="images/PNG image 3.png"></a>
+             <a href="index.html"><img src="images/logo.png"></a>
         </div>
         <ul class="nav-links">
             <li><a href="pages/about.html">About</a></li>
