--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
    <nav>
     <div class="logo">
         <a href="index.html">
-            <img src="images/logo.png" alt="OT3 Photography Logo" class="logo-img">
+            <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
         </a>
     </div>
     <ul>
