--- a/pages/birds.html
+++ b/pages/birds.html
@@ -33,7 +33,7 @@
     <!-- Navigation Section -->
    <nav>
     <div class="logo">
-        <a href="index.html">
+        <a href="../index.html">
             <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
         </a>
     </div>
