--- a/pages/reptiles.html
+++ b/pages/reptiles.html
@@ -33,7 +33,9 @@
     <!-- Navigation Section -->
    <nav>
     <div class="logo">
-        <a href="../index.html"><img src="path/to/logo.png"></a>
+         <a href="../index.html">
+            <img src="../images/logo.png" alt="OT3 Photography Logo" class="logo-img">
+        </a>
     </div>
     <ul>
         <li><a href="../pages/about.html">About</a></li>
